style(account): pointer-events: none, preventing overlap

--- a/src/film-database/pages/_fdPages.scss
+++ b/src/film-database/pages/_fdPages.scss
@@ -77,6 +77,7 @@
   }
   &[data-activity='disabled'] {
     opacity: 0;
+    pointer-events: none;
   }
 }
 
